re-fixed scroll-on-load on mobile

--- a/assets/styles/microwave.css
+++ b/assets/styles/microwave.css
@@ -1,7 +1,7 @@
 #microwave {
   pointer-events: none;
   
-  position: absolute;
+  position: fixed;
   left: 0;
   
   border: none;
